modified job description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <!-- this line load all the awesome icon -->
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
+    integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
     integrity="sha512-sZ/9+fUNdFif/7PxYzLSsPMI1CQ+FjLGRqZh+WZ+wI8gDp4dYa4w4wzZaMJtZ8c9G7JKSBytn2OyM4WkYYfOxw=="
@@ -50,83 +51,90 @@
       <button class="project_collapse"><i class="fas fa-info-circle colorful-royal-blue"></i> About Me</button>
       <div class="portfolio_content">
         <div class="Introduction">
-        <p>
-          I spent my early childhood in a remote village in Bangladesh before moving to a relatively larger city,
-          where I studied until the 10th grade. Eventually, my family and I moved to Chicago, which we now call home.
-          Growing up in different places has taught me many valuable lessons, but there are two principles that I
-          always
-          strive to uphold: curiosity and kindness. For my college journey, I attended the University of Illinois at
-          Chicago
-          and studied Computer Science and Mathematics. The deep complexities and limitless possibilities of this
-          field continue
-          to inspire and motivate me every day. In my free time, I love to read, travel, and spend time with my
-          family.
+          <p>
+            I spent my early childhood in a remote village in Bangladesh before moving to a relatively larger city,
+            where I studied until the 10th grade. Eventually, my family and I moved to Chicago, which we now call home.
+            Growing up in different places has taught me many valuable lessons, but there are two principles that I
+            always
+            strive to uphold: curiosity and kindness. For my college journey, I attended the University of Illinois at
+            Chicago
+            and studied Computer Science and Mathematics. The deep complexities and limitless possibilities of this
+            field continue
+            to inspire and motivate me every day. In my free time, I love to read, travel, and spend time with my
+            family.
           </p>
-      </div>
+        </div>
       </div>
 
       <button class="project_collapse"><i class="fas fa-briefcase colorful-navy-blue"></i> Work Experiences</button>
       <div class="portfolio_content">
         <div class="experience">
-        <p style="font-size: 14px;">
-          <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
-          <strong style="font-size: 15px;"> Workiva (August 2022 – Present) </strong>
+          <p style="font-size: 14px;">
+            <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
+            <strong style="font-size: 15px;"> Workiva (August 2022 – Present) </strong>
 
-          • Assist to triage and resolve production incidents related to the cloud platform and participated in root
-          cause analysis<br />
-          • Collaborate with other teams to address problems from incident response and implement long-term
-          solutions.<br />
-          • Enhance software tools coverage to improve monitoring, and automation with focus on security<br />
-          • Utilized monitoring tools like Splunk to track system health and proactively resolve issues.<br />
-          <br />
+            • Assist to triage and resolve production incidents related to the cloud platform and participated in root
+            cause analysis<br />
+            • Collaborate with other teams to address problems from incident response and implement long-term
+            solutions.<br />
+            • Enhance software tools coverage to improve monitoring, and automation with focus on security<br />
+            • Utilized monitoring tools like Splunk to track system health and proactively resolve issues.<br />
+            <br />
 
-          <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Software Engineering Intern</strong>
-          <Strong style="font-size: 15px;">Discover Financial Services (Summer 2022) </Strong>
+            <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Software Engineering Intern</strong>
+            <Strong style="font-size: 15px;">Discover Financial Services (Summer 2022) </Strong>
 
-          • Worked on the loans team to build new features that enable users to pay their loans on a weekly basis.
-          <br />
-          • Created pre- and post-performance tests for various APIs.<br />
-          • Improved the payment processing button to show users when the next payment is due. <br />
+            • Executed pre- and post-performance tests for multiple APIs to establish baselines and measure improvements.
+            <br />
+            • Established test goals, criteria, and used diverse testing methods to assess API performance.<br />
+            • Verified API performance in real-world sceneries by conducting comprehensive performance test<br />
+            <br />
 
-          <br />
+            <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
+            <strong style="font-size: 15px;"> Workiva (January 2022 – June 2022) </strong>
 
-          <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
-          <strong style="font-size: 15px;"> Workiva (January 2022 – May 2022) </strong>
-
-          • Contributed to the creation maintenance of security documentation, such as Standard Operating Procedures
-          (SOPs)<br />
-          • Analyzed security events using SIEM tools such as Splunk to detect and respond to potential security
-          threats<br />
-          • Assisted in incidents response, collaborating with cross-functional team to address and resolve security
-          incidents<br />
-          <br />
-          <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Client Solution Speacialist</strong>
-          <Strong style="font-size: 15px;">University of Illinois at Chicago (January 2021 – Janury 2022) </Strong>
-          • Provide support for the configuration, deployment, and support of systems including computing servers <br />
-          • Consult with clients, and personnel in other departments to resolve issues <br />
-          • Administer network and data security, email security, antivirus, firewalls, etc. <br />
-        </p>
+            • Contributed to the creation maintenance of security documentation, such as Standard Operating Procedures
+            (SOPs)<br />
+            • Analyzed security events using SIEM tools such as Splunk to detect and respond to potential security
+            threats<br />
+            • Assisted in incidents response, collaborating with cross-functional team to address and resolve security
+            incidents<br />
+            <br />
+            <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Client Solution Speacialist</strong>
+            <Strong style="font-size: 15px;">University of Illinois at Chicago (January 2021 – Janury 2022) </Strong>
+            • Efficiently resolved a wide range of client ticketing issues, including escalated IAM, VPN, and laptop security concerns.
+            <br />
+            • Consult with clients, and personnel in other departments to resolve issues.<br />
+            • Provided on-call support as needed, swiftly addressing, and resolving urgent technical issues.<br />
+          </p>
+        </div>
       </div>
-      </div>
+
+
+
       <button class="project_collapse"><i class="fas fa-certificate colorful-gold"></i> Certification</button>
       <div class="portfolio_content">
-        
+
         <div class="certifications">
-        <div class="certification">
-          <img src="images/certification.png" alt="Certificate Icon" class="certification-icon">
-          <p class="certification-name">
-            <strong>Splunk Core Certified Power User</strong>
-          </p>
+          <div class="certification">\
+            <img src="images/certification.png" alt="Certificate Icon" class="certification-icon">
+            <p class="certification-name">
+              <strong>Splunk Core Certified Power User</strong>
+            </p>
+          </div>
+
+          <div class="certification">
+            <img src="images/certification-2.jpeg" alt="Certificate Icon" class="certification-icon">
+            <p class="certification-name">
+              <strong>Application of the MITRE ATT&CK Framework</strong>
+            </p>
+          </div>
         </div>
 
-        <div class="certification">
-          <img src="images/certification-2.jpeg" alt="Certificate Icon" class="certification-icon">
-          <p class="certification-name">
-            <strong>Application of the MITRE ATT&CK Framework</strong>
-          </p>
-        </div>
+
       </div>
-      </div>
+
+
 
       <button class="project_collapse"><i class="fas fa-shield-alt colorful-gray"></i> Skills</button>
       <div class="portfolio_content">
@@ -172,23 +180,31 @@
       <button class="project_collapse"><i class="fas fa-project-diagram colorful-green"></i> Projects</button>
       <div class="portfolio_content">
         <div class="projects">
-        <p style="font-size: 15px;">
-         <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Recommendation (Inspired by how Netflix recommendation algorithm works) -> <a href="https://github.com/mtafadar/Recommendation-App" target="_blank">github</a></strong>
-          • Wrote a C++ program that can predict people’s preferences about books, movies, anime and music.<br />
-          • Developed a mathematical formula and transferred into an algorithm that can be applied to any user in a database.<br />
-          • Created better prediction considering ratings from the user by comparing with other user ratings.<br />
-          <br/>
-          <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Search (Inspired by how Google search engine works) -> <a href="https://github.com/mtafadar/Search-App" target="_blank">github</a></strong>
-          • Wrote a C++ console program that allows the user to enter many search queries and retrieve the matching web pages.<br />
-          • Built an inverted index by processing the entire document and then catalogued where each word was located.<br />
-          • Developed a method for users to search a single term or a compound sequence of multiple terms.<br />
-          <br/>
+          <p style="font-size: 15px;">
+            <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Recommendation (Inspired by how Netflix
+              recommendation algorithm works) -> <a href="https://github.com/mtafadar/Recommendation-App"
+                target="_blank">github</a></strong>
+            • Wrote a C++ program that can predict people’s preferences about books, movies, anime and music.<br />
+            • Developed a mathematical formula and transferred into an algorithm that can be applied to any user in a
+            database.<br />
+            • Created better prediction considering ratings from the user by comparing with other user ratings.<br />
+            <br />
+            <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Search (Inspired by how Google search
+              engine works) -> <a href="https://github.com/mtafadar/Search-App" target="_blank">github</a></strong>
+            • Wrote a C++ console program that allows the user to enter many search queries and retrieve the matching
+            web pages.<br />
+            • Built an inverted index by processing the entire document and then catalogued where each word was
+            located.<br />
+            • Developed a method for users to search a single term or a compound sequence of multiple terms.<br />
+            <br />
 
-          <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Baccarat Game -> <a href="https://github.com/mtafadar/Baccarat-Game" target="_blank">github</a></strong>
-          • A game that mirrors the classic Baccarat casino game with animations and transitions<br />
-          • Anyone can join from anywhere with port number and IP address to bet money on Players, Bankers or Draw<br />
-        </p>
-      </div>
+            <strong style="display: block; margin-bottom: 0px; font-size: 18px;">Baccarat Game -> <a
+                href="https://github.com/mtafadar/Baccarat-Game" target="_blank">github</a></strong>
+            • A game that mirrors the classic Baccarat casino game with animations and transitions<br />
+            • Anyone can join from anywhere with port number and IP address to bet money on Players, Bankers or
+            Draw<br />
+          </p>
+        </div>
       </div>
 
       <button class="project_collapse"><i class="fas fa-file-alt colorful-blue"></i> Resume</button>
@@ -231,7 +247,7 @@
             <li><i class="fas fa-star"></i>Fictional Reading</li>
             <li><i class="fas fa-star"></i>Making Memes</li>
           </ul>
-        </div>        
+        </div>
       </div>
       <button class="project_collapse"><i class="fas fa-blog colorful-orange"></i> Blogging</button>
     </div>
