added about me page

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -6,12 +6,11 @@
     <script src="blog.js"></script>
     <title>Mosrour</title>
   </head>
-
   <body>
     <div class="header">
       <div class="header-links">
         <a href="/index.html">Home</a>
-        <a href="#">About</a>
+        <a href="/blogging/aboutMe/about-me.html">About</a>
         <a href="#">Contact</a>
         <a href="/blogging/SaveForLater/main.html">Saved For Later</a>
       </div>
