fixed  certificatin type /

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="portfolio_content">
 
         <div class="certifications">
-          <div class="certification">\
+          <div class="certification">
             <img src="images/certification.png" alt="Certificate Icon" class="certification-icon">
             <p class="certification-name">
               <strong>Splunk Core Certified Power User</strong>
