activating the  contact me page

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -11,7 +11,7 @@
       <div class="header-links">
         <a href="/index.html">Home</a>
         <a href="/blogging/aboutMe/about-me.html">About</a>
-        <a href="#">Contact</a>
+        <a href="/blogging/contact-me/contact-me.html">Contact</a>
         <a href="/blogging/SaveForLater/main.html">Saved For Later</a>
       </div>
     </div>
