added oppenheimer in my movie review

--- a/blogging/SaveForLater/main.html
+++ b/blogging/SaveForLater/main.html
@@ -19,9 +19,9 @@
       <button class="category-tab active" data-category="general">General</button>
       <button class="category-tab" data-category="tech">Tech</button>
       <button class="category-tab" data-category="academics">Academics</button>
-      <button class="category-tab" data-category="academics">Books</button>
-      <button class="category-tab" data-category="academics">Movies</button>
-      <button class="category-tab" data-category="academics">Podcast</button>
+      <button class="category-tab" data-category="books">Books</button>
+      <button class="category-tab" data-category="movies">Movies</button>
+      <button class="category-tab" data-category="podcast">Podcast</button>
     </div>
 
     <div class="saved-items">
