change work details

--- a/blogging/aboutMe/about-me.html
+++ b/blogging/aboutMe/about-me.html
@@ -11,7 +11,7 @@
     <section class="content">
       <p>Hello and thank you for visiting my page.  I'm Mosrour. This platform is my way of sharing my passions and keeping you updated on my latest ventures because I believe every individual has a unique story to tell and a perspective worth sharing. </p>
       
-<p>Originally from Sylhet, Bangladesh, I now live in Chicago with my family and work as a security professional for a mid-sized company. I went to University of Illinois at Chicago and studied Computer Science & Mathematics.</p>
+<p>Originally from Sylhet, Bangladesh, I now live in Chicago with my family and work as a Cloud Engineer  for a large fintech company. I went to University of Illinois at Chicago and studied Computer Science & Mathematics.</p>
 
 <p> My passion lies in secure tech and, I find great fascination in exploring how culture shapes our thinking processes and influences our perspectives. <p> 
     
