--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
 
- 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
     integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
 
@@ -33,7 +32,7 @@
       </div>
       <div class="study-container">
         <i class="fa fa-graduation-cap"></i> <!-- Graduation cap Icon -->
-        <span>Computer Science & Mathemathics | University of Illinois at Chicago</span>
+        <span>Computer Science | University of Illinois Urbana-Champaign</span>
       </div>
 
       <div class="social-media">
@@ -57,7 +56,7 @@
             always
             strive to uphold: curiosity and kindness. For my college journey, I attended the University of Illinois at
             Chicago
-            and studied Computer Science and Mathematics. The deep complexities and limitless possibilities of this
+            and studied Computer Science and Mathematics. Currently, I am doing my master at University of Illinois Urbana-Champaign.  The deep complexities and limitless possibilities of this
             field continue
             to inspire and motivate me every day. In my free time, I love to read, travel, and spend time with my
             family.
