--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="center">
       <h1>Mosrour Tafadar</h1>
       <div class="job-title">
-        <img class="company-icon" src="images/company.jpeg" alt="Company Icon">
-        <p>Security Operation Intern</p>
+        <img class="company-icon" src="images/Discover.jpeg" alt="Company Icon">
+        <p>Infrastructure Engineer</p>
       </div>
       <div class="study-container">
         <i class="fa fa-graduation-cap"></i> <!-- Graduation cap Icon -->
