--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="experience">
           <p style="font-size: 14px;">
             <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
-            <strong style="font-size: 15px;"> Workiva (August 2022 – Present) </strong>
+            <strong style="font-size: 15px;"> Workiva (August 2022 – August 2023) </strong>
 
             • Assist to triage and resolve production incidents related to the cloud platform and participated in root
             cause analysis<br />
