changed the title

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Mosrour Tafadar</h1>
       <div class="job-title">
         <img class="company-icon" src="images/Discover.jpeg" alt="Company Icon">
-        <p>Infrastructure Engineer</p>
+        <p>Platform Analytics Engineer</p>
       </div>
       <div class="study-container">
         <i class="fa fa-graduation-cap"></i> <!-- Graduation cap Icon -->
