added a new article

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -36,6 +36,7 @@
         />
       </div>
       <div class="blog-list">
+
         <div class="blog-item">
           <a href="/blogging/blog1.html">
             <img src="/images/Bangladesh.webp" alt="Blog 1" class="blog-image" />
@@ -46,7 +47,17 @@
             </div>
             <h3 class="blog-title">Reflecting On My Recent Trip To Bangladesh</h3>
           </a>
-        </div>        
+        </div>     
+        
+        <div class="blog-item">
+          <a href="/blogging/blog2.html">
+            <img src="/images/Kindness.jpeg" alt="Blog 2" class="blog-image" />
+            <div class="blog-tags">
+              <span class="tag" style="background-color: orange">Kindness</span>
+            </div>
+            <h3 class="blog-title">Beyond The Filter</h3>
+          </a>
+        </div>    
 
       </div>
     </div>
