added work experience

--- a/index.html
+++ b/index.html
@@ -64,10 +64,27 @@
         </div>
       </div>
 
+
       <button class="project_collapse"><i class="fas fa-briefcase colorful-navy-blue"></i> Work Experiences</button>
       <div class="portfolio_content">
         <div class="experience">
           <p style="font-size: 14px;">
+
+
+            <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Platfrom Analytics Engineer</strong>
+            <strong style="font-size: 15px;"> Discover Financial Service (August 2023 – Present) </strong>
+
+            • Designed and developed a python Streamlit-based application that automates the warehouse allocation process,  
+            matching users’ requirement to the optimal warehouse resulting in significant cost saving.
+        <br />
+            • Assist with query optimization and SQL query writing, contributing to improve database performance and data retrieval<br />
+            • Proficiently identified and address range of snowflake connection issues to improve reliability for users <br />
+            • Enforce data security protocols, access control, and compliance standard to protect sensitive information<br />
+            • Develop and implemented python script to automate database related task such as backup and restores <br />
+            <br />
+
+
+
             <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Security Operation Intern</strong>
             <strong style="font-size: 15px;"> Workiva (August 2022 – August 2023) </strong>
 
