added work experience

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Platfrom Analytics Engineer</strong>
             <strong style="font-size: 15px;"> Discover Financial Service (August 2023 – Present) </strong>
 
-            • Designed and developed a python Streamlit-based application that automates the warehouse allocation process,  
+            • Designed and developed a python Streamlit-based application that automates the warehouse allocation process, &nbsp;  
             matching users’ requirement to the optimal warehouse resulting in significant cost saving.
         <br />
             • Assist with query optimization and SQL query writing, contributing to improve database performance and data retrieval<br />
