added my security certification

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <strong style="display: block; margin-bottom: 0px; font-size: 24px;">Platfrom Analytics Engineer</strong>
             <strong style="font-size: 15px;"> Discover Financial Service (August 2023 – Present) </strong>
 
-            • Designed and developed a python Streamlit-based application that automates the warehouse allocation process, &nbsp;  
-            matching users’ requirement to the optimal warehouse resulting in significant cost saving.
+            • Designed and developed a python Streamlit-based application that automates the warehouse allocation process,&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                matching users’ requirement to the optimal warehouse resulting in significant cost saving.
         <br />
             • Assist with query optimization and SQL query writing, contributing to improve database performance and data retrieval<br />
             • Proficiently identified and address range of snowflake connection issues to improve reliability for users <br />
@@ -131,6 +131,15 @@
       <div class="portfolio_content">
 
         <div class="certifications">
+
+          <div class="certification">
+            <img src="images/Comptia.png" alt="Certificate Icon" class="certification-icon">
+            <p class="certification-name">
+              <strong>CompTIA Security+</strong>
+            </p>
+          </div>
+
+
           <div class="certification">
             <img src="images/certification.png" alt="Certificate Icon" class="certification-icon">
             <p class="certification-name">
@@ -144,6 +153,8 @@
               <strong>Application of the MITRE ATT&CK Framework</strong>
             </p>
           </div>
+
+
         </div>
 
 
