--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
             </p>
           </div>
 
+
+          <div class="certification">
+            <img src="images/AWS-Certified-Solutions-Architect-Associate_badge.png" alt="Certificate Icon" class="certification-icon">
+            <p class="certification-name">
+              <strong>AWS Certified Solutions Architect Associate</strong>
+            </p>
+          </div>
+
+
+
           <div class="certification">
             <img src="images/certification-2.jpeg" alt="Certificate Icon" class="certification-icon">
             <p class="certification-name">
