removing beyond the filter blog

--- a/blogging/blog-main.html
+++ b/blogging/blog-main.html
@@ -38,7 +38,7 @@
       <div class="blog-list">
 
 
-        <div class="blog-item">
+        <!-- <div class="blog-item">
           <a href="/blogging/blog2.html">
             <img src="/images/Kindness.jpeg" alt="Blog 2" class="blog-image" />
             <div class="blog-tags">
@@ -46,7 +46,9 @@
             </div>
             <h3 class="blog-title">Beyond The Filter</h3>
           </a>
-        </div>   
+        </div>    -->
+
+        
 
         <div class="blog-item">
           <a href="/blogging/blog1.html">
